--- a/src/components/Styles.module.css
+++ b/src/components/Styles.module.css
@@ -956,12 +956,15 @@ background: linear-gradient(90deg, rgba(4,45,107,1) 0%, rgba(4,45,107,1) 0%, rgb
 }
 .diwali_card img {
   object-fit: cover;
-  width: 300px;
-  height: 600px;
+  width: 100%;
+  height: 100%;
 }
 .card_content {
   top: 120px;
   position: absolute;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 .card_content p {
   text-align: center;
@@ -1004,9 +1007,24 @@ background: linear-gradient(90deg, rgba(4,45,107,1) 0%, rgba(4,45,107,1) 0%, rgb
   bottom: 1rem;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   animation: float 2s ease-in-out infinite, blink 0.6s ease-in-out infinite;
+}
+.user_image_container {
+  width: 100%;
+  position: absolute;
+  top: 13vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.user_image_container img {
+  object-fit: fill;
+  width: 50px;
+  height: 50px;
+  border-radius: 20%;
+  border: 2px solid #f17512;
 }
 
 /*Media css */
