--- a/src/components/Styles.module.css
+++ b/src/components/Styles.module.css
@@ -1014,17 +1014,22 @@ background: linear-gradient(90deg, rgba(4,45,107,1) 0%, rgba(4,45,107,1) 0%, rgb
 .user_image_container {
   width: 100%;
   position: absolute;
-  top: 13vh;
+  top: 9vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.user_image_container img {
-  object-fit: fill;
+.image_Cont {
   width: 50px;
   height: 50px;
   border-radius: 20%;
   border: 2px solid #f17512;
+  overflow: hidden;
+}
+.user_image_container img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 /*Media css */
