--- a/src/components/Styles.module.css
+++ b/src/components/Styles.module.css
@@ -1018,6 +1018,7 @@ background: linear-gradient(90deg, rgba(4,45,107,1) 0%, rgba(4,45,107,1) 0%, rgb
   justify-content: space-around;
   align-items: center;
   animation: float 2s ease-in-out infinite, blink 0.6s ease-in-out infinite;
+  opacity: 0;
 }
 .user_image_container {
   width: 100%;
@@ -1280,6 +1281,7 @@ background: linear-gradient(90deg, rgba(4,45,107,1) 0%, rgba(4,45,107,1) 0%, rgb
   .send_container .diwali_card img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
   }
   .diwali_card img {
     width: 100%;
@@ -1298,41 +1300,45 @@ background: linear-gradient(90deg, rgba(4,45,107,1) 0%, rgba(4,45,107,1) 0%, rgb
     padding: 0 50px;
   }
   .send_container .nameOnCard {
-    font-size: 36px;
-    line-height: 40px;
+    font-size: 200%;
+    padding: 0 20%;
+    line-height: 100%;
   }
   .card_container .wishes {
     font-size: 10px;
   }
   .send_container .wishes {
     margin-top: 10px;
-    font-size: 20px;
+    font-size: 100%;
   }
   .card_container .happy {
     font-size: 16px;
     letter-spacing: 5px;
+    line-height: 100%;
   }
   .send_container .happy {
-    font-size: 30px;
+    font-size: 200%;
   }
   .card_container .diwali {
-    font-size: 24px;
+    font-size: 30px;
     letter-spacing: 5px;
-    line-height: 30px;
+    line-height: 100%;
   }
   .send_container .diwali {
-    font-size: 50px;
+    font-size: 350%;
     letter-spacing: 5px;
   }
   .card_container .message {
-    font-size: 10px;
+    font-size: 8px;
     padding: 0 45px;
+    line-height: 120%;
+    margin-top: 10%;
   }
   .send_container .message {
-    font-size: 16px;
-    padding: 0 50px;
-    margin-top: 30px;
-    line-height: 16px;
+    font-size: 110%;
+    padding: 0 15%;
+    margin-top: 15%;
+    /* line-height: 120%; */
   }
   .send_button {
     position: fixed;
